# bewise_quiz

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  configs.py  constants.py  container.py  docker-compose.yaml  init_app.py  main.py  pyproject.toml  utils.py
dao/: __init__.py  models.py  task_dao.py
services/: __init__.py  parsers.py  schemas.py  task_service.py
setup/: __init__.py  api_init.py  db_init.py
views/: __init__.py  task_view.py
