[tool.poetry]
name = "bewise-quiz"
version = "0.1.0"
description = "Bewise test project"
authors = ["plamer <plamer88@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-restx = "^1.1.0"
flask-sqlalchemy = "^3.0.3"
sqlalchemy = "^2.0.15"
pydantic = "^1.10.8"
requests = "^2.31.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"


[tool.poetry.group.develop.dependencies]
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
